--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,18 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Products django server",
+      "type": "python",
+      "request": "attach",
+      "pathMappings": [
         {
-            "name": "Python: Django",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/manage.py",
-            "args": [
-                "runserver",
-                "0.0.0.0:8001"
-            ],
-            "django": true,
-            "justMyCode": true
+          "localRoot": "${workspaceFolder}/services/django/products",
+          "remoteRoot": "/app"
         }
-    ]
+      ],
+      "port": 8000,
+      "host": "127.0.0.1"
+    }
+  ]
 }
