--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.formatting.provider": "black",
-    "editor.formatOnSave": true
+  "python.formatting.provider": "black",
+  "editor.formatOnSave": true,
+  "eslint.workingDirectories": [".", "services/fastapi/transactions"]
 }
