--- a/environment_files/generic/.env.rabbit
+++ b/environment_files/generic/.env.rabbit
@@ -1,4 +1,4 @@
 RABBITMQ_DEFAULT_USER="R063r"
 RABBITMQ_DEFAULT_PASS="r4B8170"
 RABBITMQ_HOST="rabbitmq"
-RABBITMQ_URL_STRING="amqp://R063r:r4B8170@rabbitmq"
+RABBITMQ_URL_STRING="amqp://R063r:r4B8170@rabbitmq:5672"
