--- a/environment_files/generic/.env.rabbit
+++ b/environment_files/generic/.env.rabbit
@@ -1,4 +1,5 @@
 RABBITMQ_DEFAULT_USER="R063r"
 RABBITMQ_DEFAULT_PASS="r4B8170"
 RABBITMQ_HOST="rabbitmq"
-RABBITMQ_URL_STRING="amqp://R063r:r4B8170@rabbitmq:5672"
+# RABBITMQ_URL_STRING="amqp://R063r:r4B8170@rabbitmq:5672"
+RABBITMQ_URL_STRING="amqps://plxuhvez:snO9QyHZUYHk8JYPEo8w9uVX8YOND74p@jackal.rmq.cloudamqp.com/plxuhvez"
